--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Hotel_Management_System.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-8.0.22.jar=C:\\MySqlConnector\\mysql-connector-java-8.0.22\\mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.22.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
