--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/Hotel_Management_System.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-8.0.22.jar=C:\\MySqlConnector\\mysql-connector-java-8.0.22\\mysql-connector-java-8.0.22.jar
+file.reference.mysql-connector-java-8.0.22.jar-1=/home/aditi/Downloads/mysql-connector-java-8.0.22/mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.22.jar}
+    ${file.reference.mysql-connector-java-8.0.22.jar}:\
+    ${file.reference.mysql-connector-java-8.0.22.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
